VSE: invalid sequence.frame_final_end #99216

Closed
opened 2022-06-27 19:58:28 +02:00 by Robert Juricek · 6 comments

Affected version: 3.3 alpha
Correct behavior: 3.2 and before

After adding a new sequence in VSE, the new sequence.frame_final_start and sequence.frame_final_end have value 0.

scene.sequence_editor.sequences.update() doesn't help. The only workaround to get the right value from sequence.frame_final_end, is changing value for sequence.frame_start.

Incorrect behavior for sequence types SOUND, SCENE and MOVIE. For more static sequence types like IMAGE, COLOR, TEXT, GLOW it works ok.

Invalid value on screenshot in line beginning with End under Duration:
image.png
Recalculated value after increasing Start value:
image.png

Affected version: 3.3 alpha Correct behavior: 3.2 and before After adding a new sequence in VSE, the new `sequence.frame_final_start` and `sequence.frame_final_end` have value `0`. `scene.sequence_editor.sequences.update()` doesn't help. The only workaround to get the right value from `sequence.frame_final_end`, is changing value for `sequence.frame_start`. Incorrect behavior for sequence types `SOUND`, `SCENE` and `MOVIE`. For more static sequence types like `IMAGE`, `COLOR`, `TEXT`, `GLOW` it works ok. Invalid value on screenshot in line beginning with `End` under `Duration`: ![image.png](https://archive.blender.org/developer/F13232967/image.png) Recalculated value after increasing Start value: ![image.png](https://archive.blender.org/developer/F13232969/image.png)
Author

Added subscriber: @rooobertek

Added subscriber: @rooobertek

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This behavior was changed in commit 7afcfe111a. Function scene.sequence_editor.sequences.update() is not part of sequencer API, looks like it's for collection class itself. There is no update function for time data anymore as it is not needed.

This behavior was changed in commit 7afcfe111aac. Function `scene.sequence_editor.sequences.update()` is not part of sequencer API, looks like it's for collection class itself. There is no update function for time data anymore as it is not needed.

This issue was referenced by 17a773cdce

This issue was referenced by 17a773cdcee9ea413d5be72a95fe1567743c269b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-06-27 22:22:48 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99216
No description provided.